--- a/package.json
+++ b/package.json
@@ -6,11 +6,45 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
+    "connect-mongo": "^2.0.2",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "dropzone": "^5.5.1",
+    "ejs": "^2.5.9",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
-  }
+    "jquery": "^3.3.1",
+    "mongoose": "^5.3.14",
+    "morgan": "^1.9.1",
+    "popper.js": "^1.14.6"
+  },
+  "description": "My Blog",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mwibutsa/fmwibutsa.git"
+  },
+  "keywords": [
+    "Mwibutsa",
+    "floribert",
+    "computer",
+    "software",
+    "development",
+    "web",
+    "design",
+    "graphics",
+    "design"
+  ],
+  "author": "mwibutsa floribert",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mwibutsa/fmwibutsa/issues"
+  },
+  "homepage": "https://github.com/mwibutsa/fmwibutsa#readme"
 }
