--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "connect-mongo": "^2.0.2",
@@ -19,9 +20,11 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
+    "install": "^0.12.2",
     "jquery": "^3.3.1",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
+    "node-pre-gyp": "^0.12.0",
     "pg": "^7.7.1",
     "popper.js": "^1.14.6"
   },
