--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": "nodejs",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,7 @@
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
     "node-pre-gyp": "^0.12.0",
+    "passport": "^0.4.0",
     "pg": "^7.7.1",
     "popper.js": "^1.14.6"
   },
