--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": false,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "10.x"
@@ -28,11 +28,11 @@
     "http-errors": "~1.6.2",
     "install": "^0.12.2",
     "jquery": "^3.3.1",
-    "mocha": "^5.2.0",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
     "node-pre-gyp": "^0.12.0",
     "nodemailer": "^4.7.0",
+    "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "pg": "^7.7.1",
     "popper.js": "^1.14.6"
@@ -59,5 +59,8 @@
   "bugs": {
     "url": "https://github.com/mwibutsa/fmwibutsa/issues"
   },
-  "homepage": "https://github.com/mwibutsa/fmwibutsa#readme"
+  "homepage": "https://github.com/mwibutsa/fmwibutsa#readme",
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  }
 }
