--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "fmwibutsa",
+  "name": "mwibutsa",
   "version": "0.0.0",
   "private": false,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "10.x"
